全局定位部分注释

--- a/localize/hdl_global_localization/config/general_config.yaml
+++ b/localize/hdl_global_localization/config/general_config.yaml
@@ -1,5 +1,5 @@
 # BBS, FPFH_RANSAC, FPFH_TEASER
-global_localization_engine: BBS
+global_localization_engine: FPFH_TEASER
 
 # downsampling for global map and query cloud
 globalmap_downsample_resolution: 0.5
